@@ -37,6 +37,7 @@ OVERALL TODO
    Update VERSION and REVISION in CMakeLists.txt
    
 * v0.0.5-256 (29 Mar. 2017 - ???) SLOC ?,??? FT ??:?? UT ?
-- (3) LocalTest uses RLGL::Seed
+- (4) Start to implement AnimatedImage class
+- LocalTest uses RLGL::Seed
 - Implement the LocalTest::onBack event
 - Handle keypressed and keyreleased events in game states
